--- a/src/Miniblog.Core/Views/Shared/Error.cshtml
+++ b/src/Miniblog.Core/Views/Shared/Error.cshtml
@@ -1,25 +1,33 @@
-﻿@model ErrorViewModel
+﻿@model int
 @{
-    ViewData["Title"] = "Error";
+    var statusCode = Model;
+    var statusmessage = string.Empty;
+    switch (statusCode)
+    {
+        case 400:
+            statusmessage = Miniblog.Core.Properties.Resources.BadRequestTheRequestCannotBeFulfilledDueToBadSyntax;
+            break;
+        case 403:
+            statusmessage = Miniblog.Core.Properties.Resources.Forbidden;
+            break;
+        case 404:
+            statusmessage = Miniblog.Core.Properties.Resources.PageNotFound;
+            break;
+        case 408:
+            statusmessage = Miniblog.Core.Properties.Resources.TheServerTimedOutWaitingForTheRequest;
+            break;
+        case 500:
+            statusmessage = Miniblog.Core.Properties.Resources.InternalServerErrorServerWasUnableToFinishProcessingTheRequest;
+            break;
+        default:
+            statusmessage = Miniblog.Core.Properties.Resources.ThatsOddSomethingWeDidntExpectHappened;
+            break;
+    }
+
+    ViewData[Constants.Title] = statusmessage;
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<div class="container">
+    <h1>@Miniblog.Core.Properties.Resources.Error @Model</h1>
+    <p>@statusmessage</p>
+</div>
