--- a/src/Miniblog.Core/Views/_ViewImports.cshtml
+++ b/src/Miniblog.Core/Views/_ViewImports.cshtml
@@ -1,7 +1,7 @@
-﻿@using Miniblog.Core
-@using Miniblog.Core.Models
 @using Miniblog.Core
 @using Miniblog.Core.Models
 @using Microsoft.Extensions.Options
-
+@*@using WebEssentials.AspNetCore.Pwa*@
+@addTagHelper *, WebOptimizer.Core
+@addTagHelper *, WebEssentials.AspNetCore.CdnTagHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
