--- a/src/Miniblog.Core/Views/Account/Login.cshtml
+++ b/src/Miniblog.Core/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LoginViewModel
 @{
-    ViewData[Constants.Title] = Miniblog.Core.Properties.Resources.Login;
-    ViewData[Constants.Description] = Miniblog.Core.Properties.Resources.SignInToTheWebsite;
+    @*ViewData[Constants.Title] = Miniblog.Core.Properties.Resources.Login;
+    ViewData[Constants.Description] = Miniblog.Core.Properties.Resources.SignInToTheWebsite;*@
 }
 
 @section head {
