--- a/src/Miniblog.Core/Views/Blog/Index.cshtml
+++ b/src/Miniblog.Core/Views/Blog/Index.cshtml
@@ -1,40 +1,73 @@
-﻿@model IAsyncEnumerable<Post>
-@inject IOptionsSnapshot<BlogSettings> settings
-@{
-    int currentPage = int.Parse(ViewContext.RouteData.Values[Constants.page] as string ?? "0");
+﻿@model List<Post>
+@*@inject IOptionsSnapshot<BlogSettings> settings*@
+@using Miniblog.Core.Models;
+@using Microsoft.AspNetCore.Http;
 
-    int totalPosts;
-    totalPosts = int.TryParse(ViewData[Constants.TotalPostCount].ToString(), out totalPosts) ? totalPosts : 0;
+@inject IHttpContextAccessor _httpContextAccessor
 
-    int totalPages = (totalPosts / this.settings.Value.PostsPerPage) - (totalPosts % this.settings.Value.PostsPerPage == 0 ? 1 : 0);
-}
-
-@await foreach (var post in Model)
+@foreach (var post in Model)
 {
-    await Html.RenderPartialAsync("Post.cshtml", post);
+
+
+    <article class="post container" itemscope itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
+        <header>
+            <h1 itemprop="name headline"><a href="@post.GetLink()" rel="canonical" itemprop="url">@post.Title</a></h1>
+            <time datetime="@post.PubDate.ToString("s")" itemprop="datePublished">Published @post.PubDate.ToString("MMM d, yyyy")</time>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a asp-controller="Blog" asp-action="edit" asp-route-id="@post.ID" title="Edit the post">Edit post</a>
+            }
+        </header>
+
+        @*<div itemprop="articleBody mainEntityOfPage" cdnify>
+                @if (showFullPost || settings.Value.ListView == PostListView.FullPosts)
+                {
+                    @Html.Raw(post.RenderContent())
+                }
+                else if (settings.Value.ListView == PostListView.TitlesAndExcerpts)
+                {
+                    @Html.Raw(post.Excerpt)
+                }
+            </div>*@
+
+        <div itemprop="articleBody mainEntityOfPage" cdnify>
+
+
+            @Html.Raw(post.Excerpt)
+
+        </div>
+
+        <footer>
+            @if (post.Categories.Any())
+            {
+                <ul class="categories">
+                    <li> Posted in </li>
+                    @foreach (string cat in post.Categories)
+                    {
+                        <li itemprop="articleSection"><a asp-controller="Blog" asp-action="Category" asp-route-category="@cat.ToLowerInvariant()" asp-route-page="">@cat</a></li>
+                    }
+                </ul>
+                <text>and has</text>
+            }
+
+            <a href="@post.GetLink()#comments" itemprop="discussionUrl" title="Go to the comments section">
+                <span itemprop="commentCount">@post.Comments.Count</span> @(post.Comments.Count == 1 ? "comment" : "comments")
+            </a>
+
+            @*<meta itemprop="author" content="@settings.Value.Owner" />
+                <meta itemprop="dateModified" content="@post.LastModified.ToString("s")" />
+                <meta itemprop="mainEntityOfPage" content="@(host + Model.GetLink())" />*@
+        </footer>
+    </article>
+
+
+
+    @if (User.Identity.IsAuthenticated)
+    {
+        @*@section Scripts {
+            <script src="~/js/admin.js" async defer></script>
+            <link rel="stylesheet" href="~/css/admin.scss" />
+        }*@
+    }
+
 }
-
-<nav class="pagination container" aria-label="Pagination">
-    @if ((await Model.AnyAsync()) && currentPage < totalPages)
-    {
-        <a rel="prev" href="@ViewData[Constants.prev]" title="Older posts">&laquo; Older</a>
-    }
-    @if (currentPage > 0)
-    {
-        <a rel="next" href="@ViewData[Constants.next]" title="Newer posts">Newer &raquo;</a>
-    }
-    <br /><br />
-
-    @section Head {
-        @if ((await Model.AnyAsync()) && currentPage < totalPages)
-        {
-            <link rel="prev" href="@ViewData[Constants.prev]" />
-        }
-        @if (currentPage > 0)
-        {
-            <link rel="next" href="@ViewData[Constants.next]" />
-        }
-    }
-</nav>
-
-@{await Html.RenderPartialAsync("_SocialSharing", ViewData[Constants.Title]);}
