--- a/src/Miniblog.Core/wwwroot/css/belowthefold.scss
+++ b/src/Miniblog.Core/wwwroot/css/belowthefold.scss
@@ -50,16 +50,15 @@ noscript p {
     }
 }
 
-.categories, .tags {
+.categories {
     list-style: none;
     display: inline;
     padding: 0;
-    margin-right: 20px;
 
     li {
         display: inline-block;
 
-        &:not(:last-child):after {
+        &:not(:first-child):not(:last-child):after {
             content: ", ";
         }
     }
