--- a/src/Miniblog.Core/Views/Blog/Edit.cshtml
+++ b/src/Miniblog.Core/Views/Blog/Edit.cshtml
@@ -50,8 +50,10 @@
 
 
 
-
-        <input type="submit" value="Save" title="Save the post" />
+    <div>
+        <input type="submit" value="Save1" title="Save the post" />
+        <br />
+        </div>
 
         <input asp-for="@Model.IsPublished" />
         <label asp-for="@Model.IsPublished">Is published</label>
