--- a/src/Miniblog.Core/Views/Blog/Index.cshtml
+++ b/src/Miniblog.Core/Views/Blog/Index.cshtml
@@ -57,7 +57,9 @@
     </div>
 </div>
 
-
+<article b-7ovnnn4vno="" class="blog-post"> <h2 b-7ovnnn4vno="" class="blog-post-title">New feature</h2> 
+    <p b-7ovnnn4vno="" class="blog-post-meta">December 14, 2020 by <a b-7ovnnn4vno="" href="#">Chris</a></p> 
+    <p b-7ovnnn4vno="">This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p> <ul b-7ovnnn4vno=""><li b-7ovnnn4vno="">First list item</li> <li b-7ovnnn4vno="">Second list item with a longer description</li> <li b-7ovnnn4vno="">Third list item to close it out</li></ul> <p b-7ovnnn4vno="">This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p> </article>
 
 @foreach (var post in Model)
 {
