--- a/src/Miniblog.Core/Views/Shared/_Layout.cshtml
+++ b/src/Miniblog.Core/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                     <a class="link-secondary" href="#" aria-label="Search">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5" /><path d="M21 21l-5.2-5.2" /></svg>
                     </a>
-                  
+
 
                     @{
                         string path = Context.Request.Path;
@@ -62,12 +62,15 @@
                 <a class="p-2 link-secondary" href="#">Health</a>
                 <a class="p-2 link-secondary" href="#">Style</a>
                 <a class="p-2 link-secondary" href="#">Travel</a>
+
+               
+
             </nav>
         </div>
     </div>
 
     <main class="container">
-       
+
 
         <div class="row g-5">
             <div class="col-md-8">
@@ -75,7 +78,7 @@
                     From the Firehose
                 </h3>
 
-                 @RenderBody()
+                @RenderBody()
 
 
 
@@ -91,7 +94,7 @@
 
                     <div class="p-4">
                         <h4 class="fst-italic">Archives</h4>
-                        <ol class="list-unstyled mb-0">
+                  @*     <ol class="list-unstyled mb-0">
                             <li><a href="#">March 2021</a></li>
                             <li><a href="#">February 2021</a></li>
                             <li><a href="#">January 2021</a></li>
@@ -105,6 +108,11 @@
                             <li><a href="#">May 2020</a></li>
                             <li><a href="#">April 2020</a></li>
                         </ol>
+                        *@ 
+
+                  <!--    https://docs.microsoft.com/en-us/aspnet/core/mvc/views/view-components?view=aspnetcore-6.0#invoking-a-view-component -->  
+
+                         @await Component.InvokeAsync("BlogMonths")
                     </div>
 
                     <div class="p-4">
@@ -122,10 +130,10 @@
     </main>
 
     <footer class="blog-footer">
-       
-        
-            <p>
-                @Miniblog.Core.Properties.Resources.PoweredBy <a href="https://github.com/madskristensen/Miniblog.Core" rel="noopener noreferrer" target="_blank">@Miniblog.Core.Properties.Resources.MiniblogCore</a>
+
+
+        <p>
+            @Miniblog.Core.Properties.Resources.PoweredBy <a href="https://github.com/madskristensen/Miniblog.Core" rel="noopener noreferrer" target="_blank">@Miniblog.Core.Properties.Resources.MiniblogCore</a>
 
         <p>
             <a href="#">Back to top</a>
